force-app/main/default/objects/Registration_Batch__c/Registration_Batch__c.object-meta.xml
<CustomObject>
    <description>Registration set that came from our online site.</description>
    <label>Registration Batch</label>
    <nameField>
        <displayFormat>RB-{0000}</displayFormat>
        <label>Registration Batch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>