force-app/main/default/objects/Registration_Batch__c/fields/Contains_Credit_Requests__c.field-meta.xml
<CustomField>
    <fullName>Contains_Credit_Requests__c</fullName>
    <description>Are there credit requests on the account?</description>
    <formula>Credit_Request_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Are there credit requests on the account?</inlineHelpText>
    <label>Contains Credit Requests</label>
    <type>Checkbox</type>
</CustomField>