force-app/main/default/objects/Registration_Batch__c/fields/Contains_PE_Requests__c.field-meta.xml
<CustomField>
    <fullName>Contains_PE_Requests__c</fullName>
    <description>Are there noncredit requests on the account?</description>
    <formula>PE_Request_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Are there noncredit requests on the account?</inlineHelpText>
    <label>Contains PE Requests</label>
    <type>Checkbox</type>
</CustomField>