force-app/main/default/objects/Registration_Batch__c/fields/Credit_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request_Count__c</fullName>
    <description>Number of Credit Requests in batch.</description>
    <inlineHelpText>Number of Credit Requests in batch.</inlineHelpText>
    <label>Credit Request Count</label>
    <summaryFilterItems>
        <field>Registration_Request__c.Is_Credit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Request__c.Registration_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>