force-app/main/default/objects/Registration_Batch__c/fields/Default_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Default_Transfer__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Default amount of payment responsibility to transfer.</description>
    <inlineHelpText>Default amount of payment responsibility to transfer.</inlineHelpText>
    <label>Default Transfer</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>