force-app/main/default/objects/Registration_Batch__c/fields/Is_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true after requests have been added.</description>
    <inlineHelpText>Set to true after requests have been added.</inlineHelpText>
    <label>Is Ready</label>
    <type>Checkbox</type>
</CustomField>