force-app/main/default/objects/Registration_Batch__c/fields/PE_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>PE_Request_Count__c</fullName>
    <description>Number of NonCredit Requests in batch.</description>
    <inlineHelpText>Number of NonCredit Requests in batch.</inlineHelpText>
    <label>PE Request Count</label>
    <summaryFilterItems>
        <field>Registration_Request__c.Is_Credit__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Request__c.Registration_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>