force-app/main/default/objects/Registration_Batch__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <description>External Registration batch id.</description>
    <externalId>true</externalId>
    <inlineHelpText>External Registration batch id.</inlineHelpText>
    <label>Registration Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>