force-app/main/default/objects/Registration_Batch__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If a credit enrollment, instructor / department. If a PE enrollment, sponsor should be the business organization that is assisting in payment.</description>
    <inlineHelpText>If a credit enrollment, instructor / department. If a PE enrollment, sponsor should be the business organization that is assisting in payment.</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsored Registration Batches</relationshipLabel>
    <relationshipName>Sponsored_Registration_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>